chore: add ngrx and start script

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -102,6 +102,14 @@
         "jest": true
       },
       "rules": {}
+    },
+    {
+      "files": [
+        "*.ts"
+      ],
+      "extends": [
+        "plugin:@ngrx/recommended"
+      ]
     }
   ]
 }
