--- a/apps/angular-nx-tdd/project.json
+++ b/apps/angular-nx-tdd/project.json
@@ -8,18 +8,25 @@
   "targets": {
     "build": {
       "executor": "@angular-devkit/build-angular:browser",
-      "outputs": ["{options.outputPath}"],
+      "outputs": [
+        "{options.outputPath}"
+      ],
       "options": {
         "outputPath": "dist/apps/angular-nx-tdd",
         "index": "apps/angular-nx-tdd/src/index.html",
         "main": "apps/angular-nx-tdd/src/main.ts",
-        "polyfills": ["zone.js"],
+        "polyfills": [
+          "zone.js"
+        ],
         "tsConfig": "apps/angular-nx-tdd/tsconfig.app.json",
         "assets": [
           "apps/angular-nx-tdd/src/favicon.ico",
           "apps/angular-nx-tdd/src/assets"
         ],
-        "styles": ["apps/angular-nx-tdd/src/styles.scss"],
+        "styles": [
+          "@angular/material/prebuilt-themes/indigo-pink.css",
+          "apps/angular-nx-tdd/src/styles.scss"
+        ],
         "scripts": []
       },
       "configurations": {
@@ -69,7 +76,9 @@
     },
     "lint": {
       "executor": "@nx/linter:eslint",
-      "outputs": ["{options.outputFile}"],
+      "outputs": [
+        "{options.outputFile}"
+      ],
       "options": {
         "lintFilePatterns": [
           "apps/angular-nx-tdd/**/*.ts",
@@ -79,7 +88,9 @@
     },
     "test": {
       "executor": "@nx/jest:jest",
-      "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
+      "outputs": [
+        "{workspaceRoot}/coverage/{projectRoot}"
+      ],
       "options": {
         "jestConfig": "apps/angular-nx-tdd/jest.config.ts",
         "passWithNoTests": true
