--- a/apps/angular-nx-tdd/project.json
+++ b/apps/angular-nx-tdd/project.json
@@ -4,20 +4,16 @@
   "projectType": "application",
   "prefix": "angular-nx-tdd",
   "sourceRoot": "apps/angular-nx-tdd/src",
-  "tags": [],
+  "tags": ["domain:photos", "type:app"],
   "targets": {
     "build": {
       "executor": "@angular-devkit/build-angular:browser",
-      "outputs": [
-        "{options.outputPath}"
-      ],
+      "outputs": ["{options.outputPath}"],
       "options": {
         "outputPath": "dist/apps/angular-nx-tdd",
         "index": "apps/angular-nx-tdd/src/index.html",
         "main": "apps/angular-nx-tdd/src/main.ts",
-        "polyfills": [
-          "zone.js"
-        ],
+        "polyfills": ["zone.js"],
         "tsConfig": "apps/angular-nx-tdd/tsconfig.app.json",
         "assets": [
           "apps/angular-nx-tdd/src/favicon.ico",
@@ -76,9 +72,7 @@
     },
     "lint": {
       "executor": "@nx/linter:eslint",
-      "outputs": [
-        "{options.outputFile}"
-      ],
+      "outputs": ["{options.outputFile}"],
       "options": {
         "lintFilePatterns": [
           "apps/angular-nx-tdd/**/*.ts",
@@ -88,9 +82,7 @@
     },
     "test": {
       "executor": "@nx/jest:jest",
-      "outputs": [
-        "{workspaceRoot}/coverage/{projectRoot}"
-      ],
+      "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
         "jestConfig": "apps/angular-nx-tdd/jest.config.ts",
         "passWithNoTests": true
