--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -19,6 +19,9 @@
       "@angular-nx-tdd/photos/feature-photos": [
         "libs/photos/feature-photos/src/index.ts"
       ],
+      "@angular-nx-tdd/photos/util-photos": [
+        "libs/photos/util-photos/src/index.ts"
+      ],
       "@angular-nx-tdd/shared/ui-common": ["libs/shared/ui-common/src/index.ts"]
     }
   },
